--- a/styles.css
+++ b/styles.css
@@ -142,16 +142,18 @@ button {
 }
 
 #histories {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 15px;
 }
 
 .card {
   width: 100%;
   height: 100%;
+  text-align: center;
   padding: 50px;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding: 20px 30px;
@@ -186,7 +188,17 @@ button {
     padding: 0 20px;
     width: 100%;
   }
-  .card {
-    flex-direction: column;
+  #histories {
+    grid-template-columns: repeat(1,1fr);
+  }
+}
+
+@media only screen and (min-width:701px) and (max-width: 992px) {
+  .box-container {
+    padding: 0 20px;
+    width: 100%;
+  }
+  #histories {
+    grid-template-columns: repeat(2,1fr);
   }
 }
