--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,23 @@ body {
   font-family: "Zilla Slab", serif;
 }
 
+#nav-bar{
+  height: 30px;
+  padding: 10px;
+  text-align: right;
+  margin-right: 50px;
+}
+#blog{
+  
+  color: white;
+  text-decoration: none;
+  font-size: larger;
+  font-weight: 800;
+}
+#blog:hover{
+  color: yellowgreen;
+}
+
 .box-container {
   width: 70%;
   margin: 0 auto;
