--- a/styles.css
+++ b/styles.css
@@ -12,21 +12,38 @@ body {
 }
 
 #nav-bar{
-  height: 30px;
+  display: flex;
+  justify-content:center;
+  align-items: center;
   padding: 10px;
   text-align: right;
   margin-right: 50px;
+
+}
+.title {
+  text-align: center;
+  color: white;
+  margin: 20px 0;
+  width: 93%;
 }
 #blog{
-  
   color: white;
   text-decoration: none;
   font-size: larger;
   font-weight: 800;
+  background-image: linear-gradient(45deg, rgb(28, 94, 70) , rgb(11, 159, 120));
+  letter-spacing: 3px;
+  padding: 10px;
+  border-radius: 10px;
 }
 #blog:hover{
-  color: yellowgreen;
+  background-image: linear-gradient(45deg, rgb(45, 114, 89) ,rgb(6, 218, 161));
+  transform: scale(1.1);
 }
+main{
+  margin: 50px 20px;
+}
+
 
 .box-container {
   width: 70%;
@@ -113,11 +130,7 @@ body {
 .hidden {
   display: none;
 }
-.title {
-  text-align: center;
-  color: white;
-  margin: 20px 0;
-}
+
 
 .divider-container {
   height: 80px;
@@ -163,6 +176,12 @@ button {
   grid-template-columns: repeat(3,1fr);
   gap: 15px;
 }
+#blog-container {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: 15px;
+  margin: 20px;
+}
 
 .card {
   width: 100%;
@@ -201,11 +220,24 @@ button {
 }
 
 @media only screen and (max-width: 700px) {
+  
+  #nav-bar{
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    padding: 10px;
+    text-align: right;
+    margin-right: 0px;
+  
+  }
   .box-container {
     padding: 0 20px;
     width: 100%;
   }
   #histories {
+    grid-template-columns: repeat(1,1fr);
+  }
+  #blog-container {
     grid-template-columns: repeat(1,1fr);
   }
 }
