--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,8 @@ main{
   top: 50%; 
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 250px;
+  height: auto;
+  min-height: 250px;
   width: 400px;
   background-color: #171717;
   border-radius: 15px;
