--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ main{
 }
 
 #question {
-  height: 100px;
+  min-height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -66,6 +66,7 @@ main{
   );
   backdrop-filter: blur(5px);
   margin-bottom: 30px;
+  padding:5%;
 }
 
 #display {
